# BagholderDeLorean

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  fly.toml
.claude/skills/issue/: SKILL.md
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: congress.rs  cramer.rs  finra.rs  lib.rs  polygon.rs  screen.rs  store.rs
crates/web/: Cargo.toml  Trunk.toml  index.html
crates/web/e2e/: README.md  validate.mjs
crates/web/src/: components.rs  main.rs
crates/web/styles/: ds.css
docs/: deploy.md
