[workspace]
resolver = "2"
members = ["crates/core", "crates/data", "crates/api", "crates/web"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[profile.release]
strip = true
