[package]
name = "bagholder-data"
version.workspace = true
edition.workspace = true

[dependencies]
bagholder-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
duckdb = { version = "1", features = ["bundled", "chrono"] }
